# MRSimTracks

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA_LICENSE.md  LICENSE  README.md  benchmark.py  example.py  make_caps.py  mkdocs.yml  pyproject.toml  reseeding.py  track.ipynb  tracking.py
.github/workflows/: ci.yml  docs.yml  publish.yml  release-validation.yml
docs/: api.md  data-model.md  data-provenance.md  index.md  install.md  quickstart.md  reseeding.md  testing.md
example/: CFD_velocity.vtu  Inlet.vtp  Outlet.vtp  README.md  Wall.vtp
mrsimtracks/: __init__.py  core.py  io.py  parallel.py  reseeding.py  sampler.py  seeding.py  wall_slip.py
mrsimtracks/dev/: __init__.py  caps.py
particle_tracking/: __init__.py  caps.py  reseeding.py  tracking.py
scripts/: ground_truth.py  render_readme_assets.py
tests/: diagnostics.py  fixture_paths.py  test_example_data.py  test_ground_truth_regression.py  test_mesh_conditioning.py  test_parallel.py  test_public_api.py  test_release_validation.py  test_sampler.py  test_seeding.py  test_small_behavior.py  test_time_interp.py  test_wall_slip.py
tests/data/: ground_truth.h5
